--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -75,6 +75,7 @@ body {
 }
 .container {
   padding: 0 50px;
+  width: 100%;
 }
 .preloader {
   width: 100%;
@@ -152,6 +153,7 @@ body {
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 3;
 }
 .nav__body {
   display: flex;
@@ -191,21 +193,26 @@ body {
   font-family: 'Montserrat', sans-serif;
   transition: 0.3s;
 }
-@keyframes bgAnim {
-  from {
-    background-position: 2px 0px;
-  }
-  to {
-    background-position: 0 0px;
-  }
-}
 .header {
   width: 100%;
   min-height: 100vh;
-  background: url(../img/bg.png) 0 0 / cover;
-  animation: 0.2s bgAnim infinite linear;
+  background: url(../img/noise.gif);
+  position: relative;
+}
+.header:after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(15, 15, 15, 0.8);
+  z-index: 0;
 }
 .header__body {
+  position: relative;
+  z-index: 2;
   width: 100%;
   min-height: 100vh;
   display: flex;
