--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -22,11 +22,12 @@ body{
 .wrapper{
 	min-height: 100vh;
 	width: 100%;
-	overflow: hidden
+	overflow: hidden;
 }
 
 .container{
 	padding: 0 50px;
+	width: 100%;
 }
 
 
@@ -139,6 +140,7 @@ body{
 	position: fixed;
 	top: 0;
 	left: 0;
+	z-index: 3;
 }
 .nav__body {
 	display: flex;
@@ -180,24 +182,29 @@ body{
 	transition:  .3s;
 }
 
-@keyframes bgAnim
-{
-	from{
-		background-position: 2px 0px;
-	}
-	to{
-		background-position: 0 0px;
-	}
-}
 //===================HEADER==============
 
 .header {
 	width: 100%;
 	min-height: 100vh;
-	background: url(../img/bg.png) 0 0 / cover ;
-	animation: .2s bgAnim infinite linear;
+	background: url(../img/noise.gif);
+	position: relative;
+	&:after{
+		content: "";
+		display: block;
+
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		background-color:rgba(15,15,15, .8);
+		z-index: 0;
+	}
 }
 .header__body {
+	position: relative;
+	z-index: 2;
 	width: 100%;
 	min-height: 100vh;
 	display: flex;
