--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -121,7 +121,7 @@ body {
   }
   100% {
     width: 42px;
-    transform: translateX(0) translateY(0) rotateY(180deg);
+    transform: translateX(0%) translateY(0%) rotateY(180deg);
     top: 11px;
     left: 50px;
   }
@@ -130,18 +130,18 @@ body {
   0% {
     top: 50%;
     left: 50%;
-    transform: translateX(-50%) translateY(-50%) rotateY(180deg);
+    -webkit-transform: translateX(-50%) translateY(-50%) rotateY(180deg);
     width: 500px;
   }
   20% {
     top: 50%;
     left: 50%;
-    transform: translateX(-50%) translateY(-50%) rotateY(180deg);
+    -webkit-transform: translateX(-50%) translateY(-50%) rotateY(180deg);
     width: 500px;
   }
   100% {
     width: 42px;
-    transform: translateX(0) translateY(0) rotateY(180deg);
+    -webkit-transform: translateX(0%) translateY(0%) rotateY(180deg);
     top: 11px;
     left: 50px;
   }
@@ -161,7 +161,7 @@ body {
   }
   100% {
     width: 42px;
-    transform: translateX(0) translateY(0) rotateY(180deg);
+    transform: translateX(0%) translateY(0%) rotateY(180deg);
     top: 11px;
     left: 50px;
   }
@@ -181,7 +181,7 @@ body {
   }
   100% {
     width: 42px;
-    transform: translateX(0) translateY(0) rotateY(180deg);
+    transform: translateX(0%) translateY(0%) rotateY(180deg);
     top: 11px;
     left: 50px;
   }
