--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -90,7 +90,7 @@ body{
 	}
 	100%{
 		width: 42px;
-		transform:  translateX(0) translateY(0) rotateY(180deg);
+		transform:  translateX(0%) translateY(0%) rotateY(180deg);
 		top: 11px;
 		left: 50px;
 	}
@@ -101,19 +101,19 @@ body{
 	0%{
 		top: 50%;
 		left: 50%;
-		transform: translateX(-50%) translateY(-50%) rotateY(180deg);
+		-webkit-transform: translateX(-50%) translateY(-50%) rotateY(180deg);
 		width: 500px;
 	}
 
 	20%{
 		top: 50%;
 		left: 50%;
-		transform: translateX(-50%) translateY(-50%) rotateY(180deg);
+		-webkit-transform: translateX(-50%) translateY(-50%) rotateY(180deg);
 		width: 500px;
 	}
 	100%{
 		width: 42px;
-		transform:  translateX(0) translateY(0) rotateY(180deg);
+		-webkit-transform:  translateX(0%) translateY(0%) rotateY(180deg);
 		top: 11px;
 		left: 50px;
 	}
@@ -136,7 +136,7 @@ body{
 	}
 	100%{
 		width: 42px;
-		transform:  translateX(0) translateY(0) rotateY(180deg);
+		transform:  translateX(0%) translateY(0%) rotateY(180deg);
 		top: 11px;
 		left: 50px;
 	}
@@ -159,7 +159,7 @@ body{
 	}
 	100%{
 		width: 42px;
-		transform:  translateX(0) translateY(0) rotateY(180deg);
+		transform:  translateX(0%) translateY(0%) rotateY(180deg);
 		top: 11px;
 		left: 50px;
 	}
