--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -52,7 +52,8 @@ body{
 		position: absolute;
 		top: 50%;
 		left: 50%;
-		transform: rotateY(180deg) translateX(50%) translateY(-50%);
+		transform: translateX(50%) translateY(-50%) rotateY(180deg);
+		-webkit-transform: translateX(50%) translateY(-50%) rotateY(180deg);
 		width: 500px;
 	}
 
@@ -102,6 +103,7 @@ body{
 		top: 50%;
 		left: 50%;
 		-webkit-transform: translateX(-50%) translateY(-50%) rotateY(180deg);
+		transform: translateX(-50%) translateY(-50%) rotateY(180deg);
 		width: 500px;
 	}
 
@@ -109,11 +111,13 @@ body{
 		top: 50%;
 		left: 50%;
 		-webkit-transform: translateX(-50%) translateY(-50%) rotateY(180deg);
+		transform: translateX(-50%) translateY(-50%) rotateY(180deg);
 		width: 500px;
 	}
 	100%{
 		width: 42px;
 		-webkit-transform:  translateX(0%) translateY(0%) rotateY(180deg);
+		transform:  translateX(0%) translateY(0%) rotateY(180deg);
 		top: 11px;
 		left: 50px;
 	}
